# lettere

./: Cargo.toml
.github/workflows/: general.yml  scheduled-audit.yml
migrations/: 20210214234011_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
