[package]
name = "lettere"
version = "0.1.0"
authors = ["nahuakang <kangnahua@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# Double square brackets: array for TOML.
# We can only have 1 library per project, but multiple bins per project.
[[bin]]
path = "src/main.rs"
name = "lettere"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.3"
serde = { version = "1", features = ["derive"] }
funty = "=1.1.0"  # Workaround for bitvec breaking change
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.8.3"
log = "0.4.14"
tracing = "0.1.23"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features =["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"

[dependencies.sqlx]
version = "0.5"
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
